--- a/src/tela/TelaLIstaOSs.form
+++ b/src/tela/TelaLIstaOSs.form
@@ -84,7 +84,7 @@
         <Component class="javax.swing.JTable" name="jTableOSs">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="10" rowCount="0">
+              <Table columnCount="11" rowCount="0">
                 <Column editable="false" title="C&#xf3;digo" type="java.lang.String"/>
                 <Column editable="false" title="Status" type="java.lang.String"/>
                 <Column editable="false" title="Servi&#xe7;o feito" type="java.lang.String"/>
@@ -94,7 +94,8 @@
                 <Column editable="false" title="Pe&#xe7;a usada" type="java.lang.String"/>
                 <Column editable="false" title="Quantidade usada" type="java.lang.String"/>
                 <Column editable="false" title="Valor unit&#xe1;rio" type="java.lang.String"/>
-                <Column editable="false" title="Valor Total" type="java.lang.String"/>
+                <Column editable="false" title="Valor sem desconto" type="java.lang.String"/>
+                <Column editable="false" title="Valor com desconto" type="java.lang.String"/>
               </Table>
             </Property>
           </Properties>
