--- a/src/tela/TelaListaOrcamentos.form
+++ b/src/tela/TelaListaOrcamentos.form
@@ -79,7 +79,7 @@
         <Component class="javax.swing.JTable" name="jTableOrcamentos">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="10" rowCount="0">
+              <Table columnCount="12" rowCount="0">
                 <Column editable="false" title="C&#xf3;digo" type="java.lang.String"/>
                 <Column editable="false" title="Placa do veiculo" type="java.lang.String"/>
                 <Column editable="false" title="Servico feito" type="java.lang.String"/>
@@ -89,7 +89,9 @@
                 <Column editable="false" title="Pe&#xe7;a usada" type="java.lang.String"/>
                 <Column editable="false" title="Quantidade de pe&#xe7;as usada" type="java.lang.String"/>
                 <Column editable="false" title="valor unit&#xe1;rio das pe&#xe7;as" type="java.lang.String"/>
-                <Column editable="false" title="Valor total " type="java.lang.String"/>
+                <Column editable="false" title="porcentagem de desconto" type="java.lang.String"/>
+                <Column editable="false" title="Valor total sem desconto" type="java.lang.String"/>
+                <Column editable="false" title="valor total com desconto" type="java.lang.String"/>
               </Table>
             </Property>
           </Properties>
