--- a/src/tela/TelaCadastroDeVeiculos.form
+++ b/src/tela/TelaCadastroDeVeiculos.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="title" type="java.lang.String" value="Ve&#xed;culos"/>
     <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -142,7 +146,6 @@
                                   <Component id="jButtonEditar" min="-2" pref="149" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="jButtonRemover" min="-2" pref="178" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -250,10 +253,12 @@
                       </Group>
                   </Group>
                   <EmptySpace pref="12" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButtonCadastrarVeiculo" alignment="3" min="-2" pref="58" max="-2" attributes="0"/>
-                      <Component id="jButtonEditar" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jButtonRemover" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jButtonCadastrarVeiculo" alignment="3" min="-2" pref="58" max="-2" attributes="0"/>
+                          <Component id="jButtonEditar" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -360,6 +365,9 @@
         </Component>
         <Component class="javax.swing.JRadioButton" name="jRadioButtonPessoaJuridica">
           <Properties>
+            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+              <ComponentRef name="buttonGroup1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Pessoa jur&#xed;dica"/>
           </Properties>
         </Component>
@@ -367,6 +375,9 @@
         </Component>
         <Component class="javax.swing.JRadioButton" name="jRadioButtonPessoaFisica">
           <Properties>
+            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+              <ComponentRef name="buttonGroup1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Pessoa f&#xed;sica"/>
           </Properties>
         </Component>
@@ -400,9 +411,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldPlaca">
-          <Properties>
-            <Property name="editable" type="boolean" value="false"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel8">
           <Properties>
@@ -482,6 +490,7 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="9" rowCount="0">
+                    <Column editable="false" title="Dono do veiculo" type="java.lang.String"/>
                     <Column editable="false" title="Placa" type="java.lang.String"/>
                     <Column editable="false" title="Chassi" type="java.lang.String"/>
                     <Column editable="false" title="Renavan" type="java.lang.String"/>
@@ -490,7 +499,6 @@
                     <Column editable="false" title="Tipo de veiculo" type="java.lang.String"/>
                     <Column editable="false" title="Ano de fabrica&#xe7;&#xe3;o" type="java.lang.String"/>
                     <Column editable="false" title="Ano do modelo" type="java.lang.String"/>
-                    <Column editable="false" title="Dono do veiculo" type="java.lang.String"/>
                   </Table>
                 </Property>
               </Properties>
